deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogu-haritasi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dogu-haritasi
  template:
    metadata:
      labels:
        app: dogu-haritasi
    spec:
      # KUBERNETES BURADAN İZİN BELGELERİNİ ALIR
      imagePullSecrets: 
        - name: gitea-reg-cred
      containers:
        - name: web
          # İmajınız
          image: git.konstantiniyye.studio/gitea_admin/dogu:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # Kaynak limitleri eklemek best-practice'dir
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          # Uygulamanın ayakta olup olmadığını kontrol eder
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: dogu-haritasi-service
  namespace: default
spec:
  # Service objesine secrets eklenmez, sadece Pod'u seçer
  selector:
    app: dogu-haritasi
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogu-haritasi-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: harita.konstantiniyye.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dogu-haritasi-service
                port:
                  number: 80
